# openfast-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ATTRIBUTION.md  Dockerfile  Dockerfile-openfast  LICENSE  Makefile  README.md  app.py  app.yaml  app_configuration.json  cloudbuild-openfast.yaml  cloudbuild.yaml  deployment_configuration.json  octue.yaml  openfast-service.Dockerfile  openfast.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  service.yaml  setup.cfg  setup.py  setup_xfoil.sh  tox.ini  twine.json  xfoil.patch
.devcontainer/: devcontainer-lock.json  devcontainer.json  postattach.sh
.github/workflows/: cd.yml  python-ci.yml  release.yml
data/configuration/: configuration_values.json  values.json
data/input/: config.json  input_values.json  manifest.json  values.json
devops/: build-and-deploy-openfast-service.yaml  build-openfast.yaml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
openfast/: .octue  __init__.py  routines.py
openfast_module/: __init__.py  routines.py
openfast_service/: __init__.py  app.py  routines.py
post_process/: __init__.py  figures.py
terraform/: iam.tf  main.tf  outputs.tf  secrets.tf  storage.tf  variables.tf
terraform_static/: main.tf  variables.tf
tests/: base.py  example_test.py  test_app.py  test_deployment.py  test_routines.py
tests/configuration/: test_configuration.py
tests/data/: 5MW_Land_DLL_WTurb.fst  README.md
tests/openfast/: test_openfast.py
viiflow_module/: __init__.py  routines.py
xfoil_module/: __init__.py  routines.py
(+34 files in other folders)
